# snapshotter-lite-v2

./: .dockerignore  .gitignore  Dockerfile.setup  README.md  SLOT_BASED_WORK_DISTRIBUTION.md  build-docker.sh  build-setup.sh  build.sh  collector_test.sh  configure-environment.sh  deploy-services.sh  docker-compose-dev.yaml  docker-compose.yaml  env.example  init_docker.sh  pyproject.toml  snapshotter_autofill.sh  test_collector_check.sh
.github/workflows/: docker-publish.yml
keygen/: generate_key.go  go.mod  go.sum
scripts/: dsv_startup.sh  generate_p2p_key.py  register_peer_id.py  setup_operator_keys.sh  wait_for_p2p_key_and_start.sh
snapshotter/: processor_distributor.py  snapshotter_id_ping.py  system_event_detector.py  version.py
snapshotter/settings/: config.py
snapshotter/static/abis/: ProtocolContract.json
snapshotter/tests/: test_missed_snapshot_batch.py  test_tg_reporting_service.py  test_web3_async_provider.py
snapshotter/utils/: callback_helpers.py  data_utils.py  generic_worker.py  missed_snapshot_batch_format.py  slot_selection_tracker.py  snapshot_utils.py  snapshot_worker.py
snapshotter/utils/models/: message_models.py  settings_model.py
snapshotter/utils/models/proto/snapshot_submission/: submission.proto  submission_pb2.py
snapshotter/utils/preloaders/block_details/: preloader.py
